fixed module picker not showing EMPTY when using Hide Small Modules

--- a/edsy.css
+++ b/edsy.css
@@ -1297,30 +1297,30 @@ BODY:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.rese
 	display: none;
 }
 
-BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size2 .row:not(.size2),
-BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size3 .row:not(.size3),
-BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size4 .row:not(.size4),
-BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size5 .row:not(.size5),
-BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size6 .row:not(.size6),
-BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size7 .row:not(.size7),
-BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size8 .row:not(.size8),
-BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size2:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.size2),
-BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size3:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.size3),
-BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size4:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.size4),
-BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size5:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.size5),
-BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size6:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.size6),
-BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size7:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.size7),
-BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size8:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.size8) {
+BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size2 .row:not(.empty):not(.size2),
+BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size3 .row:not(.empty):not(.size3),
+BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size4 .row:not(.empty):not(.size4),
+BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size5 .row:not(.empty):not(.size5),
+BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size6 .row:not(.empty):not(.size6),
+BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size7 .row:not(.empty):not(.size7),
+BODY.onlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size8 .row:not(.empty):not(.size8),
+BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size2:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.empty):not(.size2),
+BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size3:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.empty):not(.size3),
+BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size4:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.empty):not(.size4),
+BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size5:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.empty):not(.size5),
+BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size6:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.empty):not(.size6),
+BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size7:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.empty):not(.size7),
+BODY.mostlybest:not(.experimental) #outfitting_modules.SLOT #outfitting_modules_picker.size8:not(.component_PP):not(.component_TH):not(.component_PD):not(.component_FT) .row:not(.empty):not(.size8) {
 	display: none;
 }
 
-BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size2 .row:not(.size8):not(.size7):not(.size6):not(.size5):not(.size4):not(.size3):not(.size2),
-BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size3 .row:not(.size8):not(.size7):not(.size6):not(.size5):not(.size4):not(.size3),
-BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size4 .row:not(.size8):not(.size7):not(.size6):not(.size5):not(.size4),
-BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size5 .row:not(.size8):not(.size7):not(.size6):not(.size5),
-BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size6 .row:not(.size8):not(.size7):not(.size6),
-BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size7 .row:not(.size8):not(.size7),
-BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size8 .row:not(.size8) {
+BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size2 .row:not(.empty):not(.size8):not(.size7):not(.size6):not(.size5):not(.size4):not(.size3):not(.size2),
+BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size3 .row:not(.empty):not(.size8):not(.size7):not(.size6):not(.size5):not(.size4):not(.size3),
+BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size4 .row:not(.empty):not(.size8):not(.size7):not(.size6):not(.size5):not(.size4),
+BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size5 .row:not(.empty):not(.size8):not(.size7):not(.size6):not(.size5),
+BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size6 .row:not(.empty):not(.size8):not(.size7):not(.size6),
+BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size7 .row:not(.empty):not(.size8):not(.size7),
+BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.size8 .row:not(.empty):not(.size8) {
 	display: none;
 }
 
